fix search/index layout issues

--- a/scr/assets/css/style.css
+++ b/scr/assets/css/style.css
@@ -38,12 +38,17 @@ header .background {
   top: 0;
   left: 0;
   width: 100%;
-  height: 30vh;
   background-image: url('./bg1.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 110% 110%;
   filter: blur(15px);
+}
+header .background {
+  height: 100vh;
+}
+header .background.search {
+  height: 30vh;
 }
 .navbar .logo {
   z-index: 4;
@@ -536,7 +541,8 @@ header .page-container {
   overflow: visible;
 }
 .section-anime {
-  height: 100vh;
+  margin: 10px;
+
   margin: 0 auto;
   padding: 20px;
   background-color: var(--dark-bg);
@@ -621,7 +627,15 @@ header .page-container {
   gap: 20px;
   margin-bottom: 30px;
 }
+.section-anime .grid#anime-search-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
 
+  grid-auto-flow: row;
+  gap: 20px;
+  margin-bottom: 30px;
+}
 /* start footer style */
 footer {
   min-height: fit-content;
